# ai-proxy-hub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  aiproxyhub.py  cli_modern.py  pyproject.toml  router_server.py  start.py
ai_proxy_hub/: __init__.py  __main__.py  app_paths.py  cli.py  cli_app.py  cli_display.py  cli_key_manager.py  cli_local_keys.py  cli_runtime.py  cli_settings.py  cli_settings_appearance.py  cli_settings_general.py  cli_settings_network.py  cli_upstreams.py  cli_usage.py  cli_workspace.py  client_switch.py  client_switch_claude.py  client_switch_codex.py  client_switch_common.py  client_switch_gemini.py  config.py  config_endpoints.py  config_logic.py  config_routing.py  console_i18n.py  constants.py  entrypoints.py  file_io.py  http_handler_base.py  http_handler_control.py  http_handler_proxy.py  http_server.py  legacy_impl.py  local_keys.py  network.py  network_process.py  network_proxy.py  network_runtime.py  network_usage.py  (+13 more)
docs/: EXTERNAL_TEST_ENV.md  FAQ.md  FAQ.zh-CN.md  PROJECT_STRUCTURE.md  RELEASE_WORKFLOW.md  WINDOWS_VM_OPENSSH_SETUP.txt
examples/: api-config.example.json  external-smoke.env.example
scripts/: bootstrap_apt_signing.py  build_deb_in_container.py  build_release.py  release_preflight.py  run_named_unittest.py  run_remote_linux_smoke.py  sync_apt_repo.py  sync_homebrew_tap.py  sync_release_snapshot.py  sync_winget_manifest.py  verify_release_artifacts.py
tests/: test_cli_modern.py  test_release_preflight.py  test_remote_linux_smoke.py  test_router.py
web/: app-01-i18n.js  app-02-core.js  (+13 more)
(+3 files in other folders)
